ola-parser/src/testdata/syntaxTests/constants/cyclic_dependency_1.sol
contract C {
    u256 constant a = a;
}
// ----
// TypeError 6161: (17-36): The value of the constant a has a cyclic dependency via a.
